--- a/rsvp-app/package.json
+++ b/rsvp-app/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongodb": "^3.5.9",
     "mongoose": "^5.9.22",
     "node.js": "0.0.1-security",
     "nodemon": "^2.0.4",
